# SW-Embedding-Test

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  index.html  pyproject.toml
config/: eval.yaml  judge.yaml  models.yaml
data/: judgments_pairwise_frontier.csv  metrics_known_item.csv  metrics_leaderboard.csv  qrels_bradley_terry.csv  queries_known_item.csv  queries_topical.csv
data/human_validation/: README.md  pairwise_review_rater1.html  pairwise_review_rater1_completed.csv  pairwise_review_rater2.html  pairwise_review_rater2_completed.csv  pairwise_review_rater3.html  pairwise_review_rater3_completed.csv
migrations/: 0001_oss_embeddings.sql  0002_eval_testset.sql
scripts/: compare_judge_committees.py  compare_judges.py  dedup_eval.py  evaluate_pairwise.py  ki_eval_final.py  make_pairwise_review_v2.py  pairwise_judge.py
src/sswr_eval/: cli.py  config.py  db.py  evaluate.py  stats.py
src/sswr_eval/embedders/: base.py
src/swrd_eval/: __init__.py  corpus.py  embed.py  labeling.py  report.py  rerank.py  retrieve.py  testset.py
src/swrd_eval/embedders/: __init__.py  flag.py  ollama_backend.py  st_mps.py
tests/: test_core.py
